# Open-AI-API-Telegram-Bot

./: .gitignore  Cargo.toml  LICENSE  README.md  _settings.toml  db.sqlite  db.sqlite-shm  db.sqlite-wal
.sqlx/: query-24abbed8411fce35e40855b815f32cfc32511ff3f60a2c196e1e68cd1b51456b.json  query-595adaf23e7c362ad4a3dab70c297d4bb69f2a141aa1f15d440eec62f004d29e.json  query-5f8a6b8a7b4f4a366c99db290066d197edd46ab9af59d4c954daa604ee35c405.json  query-68503d22d9070b46c6444e0afd6f0794a7fed85e2446a038f2f697144bedf473.json  query-687b8c84e7b2d000ad71d9ed20df78af7f12fb088043d06f76a813017976300d.json  query-95635d87b4b99a4452b484828f6f44e24c39887e05da92af8d309ce42e28596a.json  query-c77c2dc7fb68e90c7f7b820fb944fe9edbe33a9519d3edb6a7cf579d002d76a0.json  query-d388f2d1b2e460eeaadb47604e61339aee40d2f66f75437425cc6ef5b9e2a1d4.json  query-e0047b24e076c7d780323b31f597f874563594086bb1052ab4aabef8a4d20773.json  query-f31d3a93b564b2bb2d105e9fe8e58d461230fc54d4c7140b1ed07c1adee51dd1.json
logs/: log.txt.2025-06-24
src/: lm_types.rs  logging.rs  main.rs  system.rs
src/db/: sqlite.rs
src/storage/: conversation.rs  db_storage.rs  fingerprint.rs  memory_storage.rs  mod.rs  temperature.rs
src/telegram/: ai_request.rs  command.rs  handler.rs  handlers.rs  inline.rs  message.rs  mod.rs  storage_handler.rs
