[package]
name = "req_to_llama"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
colored = "3.0.0"
config = { version = "0.15.8", features = ["toml"] }
lazy_static = "1.4.0"
log = "0.4.25"
log4rs = "1.3.0"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
teloxide = { version = "0.12.2", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
