[package]
name = "req_to_llama"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.40"
colored = "3.0.0"
config = { version = "0.15.11", features = ["toml"] }
dashmap = "6.1.0"
lazy_static = "1.4.0"
log = "0.4.25"
log4rs = "1.3.0"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["json"] }
rusqlite = {version = "=0.30.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "=0.7.3", features = ["runtime-tokio", "sqlite"] }
teloxide = { version = "=0.13", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
